# BleacherStream

./: .gitignore  CMakeLists.txt  Main.qml  README.md  client.cpp  client.hpp  host.qml  main.cpp  main.qml
android/: AndroidManifest.xml
